# health-agent

./: .coveragerc  .env.example  .env.example.monitoring  .gitignore  API_README.md  BARE_EXCEPT_FIX_SUMMARY.md  BUG_FIX_SUMMARY.md  CACHING_IMPLEMENTATION_SUMMARY.md  CD-SETUP.md  CIRCUIT_BREAKER_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CLAUDE.md.backup  COVERAGE_SUMMARY.md  DATABASE_ARCHITECTURE_ANALYSIS.md  DATABASE_OVERHAUL_PLAN.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_TEST_REPORT.md  DEVELOPMENT.md  Dockerfile  EPIC_006_COMPLETION_SUMMARY.md  EPIC_006_IMPLEMENTATION_PLAN.md  EPIC_009_PHASE_1_IMPLEMENTATION_SUMMARY.md  EPIC_009_PHASE_2_IMPLEMENTATION_PLAN.md  EPIC_009_PHASE_2_IMPLEMENTATION_SUMMARY.md  EPIC_009_PHASE_3_IMPLEMENTATION_SUMMARY.md  EPIC_009_PHASE_4_IMPLEMENTATION_PLAN.md  EPIC_009_PHASE_4_IMPLEMENTATION_SUMMARY.md  EPIC_009_PHASE_6_IMPLEMENTATION_PLAN.md  EPIC_009_PHASE_6_IMPLEMENTATION_SUMMARY.md  ERROR_HANDLING_GUIDE.md  EXTRACTION_SUMMARY.md  FIX_SUMMARY_ISSUE_120.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_ISSUE_121.md  IMPLEMENTATION_SUMMARY_ISSUE_69.md  ISSUE_20_FIX_IMPLEMENTATION.md  MEM0_INVESTIGATION.md  (+57 more)
.agents/: FINAL_VERIFICATION_CHECKLIST.md  PHASE1-COMPLETE-SUMMARY.md  PHASE2-COMPLETE-SUMMARY.md  PHASE3-COMPLETE-SUMMARY.md  PHASE4-COMPLETE-SUMMARY.md
.bmad/: SLEEP_QUIZ_SAVE_ERROR_ANALYSIS.md  SLEEP_QUIZ_USER_8191393299_FIX.md
.claude/: worklog.md
docs/: CUSTOM_TRACKING_GUIDE.md  GITHUB_SECRETS_SETUP.md  MEMORY_ARCHITECTURE.md  METRICS_CATALOG.md  (+5 more)
(+412 files in other folders)
