[project]
name = "health-agent"
version = "0.1.0"
description = "Adaptive AI health coach via Telegram"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=0.0.14",
    "python-telegram-bot[job-queue]>=22.5",
    "psycopg[binary]>=3.1.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
